<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LightMeter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recommendation">RECOMMENDATİON</string>
    <string name="you_can_view_the_light_recommendations_here">You can view the light recommendations here.</string>
    <string name="study_desk">Study Desk</string>
    <string name="living_room">Living Room</string>
    <string name="library">Library</string>
    <string name="hotel">Hotel</string>
    <string name="kitchen">Kitchen</string>
    <string name="bathroom">Bathroom</string>
    <string name="locker_room">Locker Room</string>
    <string name="classroom">Classroom</string>
    <string name="gym">Gym</string>
    <string name="dinning_room">Dinning Room</string>
    <string name="cafetaria">Cafetaria</string>
    <string name="history">HISTORY</string>
    <string name="you_can_check_your_light_history_here">You can check your light history here.</string>
    <string name="there_is_currently_no_light_recording_here">There is currently no light recording here.</string>
    <string name="save_now">Save Now</string>
    <string name="history_">History</string>
    <string name="lightmeter">Lightmeter</string>
    <string name="settings">Settings</string>
    <string name="recommend">Recommend</string>
    <string name="max">Max</string>
    <string name="duration">Duration</string>
    <string name="start_test">Start Test</string>
    <string name="restart_test">Restart Test</string>
    <string name="save_test">Save Test</string>
    <string name="stop">Pause Test</string>
    <string name="lux">Lux</string>
    <string name="test_1">Test 1</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="delete_all">Delete All</string>
    <string name="are_you_sure_you_want_to_delete_this_record">Are you sure you want to delete this record?</string>
    <string name="cancel">Cancel</string>
    <string name="all_records_will_be_deleted_are_you_sure">All records will be deleted. Are you sure ?</string>
    <string name="all_records_delted_list_is_empty">All records deleted, list is empty</string>
    <string name="Pause_test">Pauese Test</string>
    <string name="data_saved">Data saved successfully</string>
    <string name="data_Deleted">Data Deleted</string>
    <string name="get_pro_lux_ligt_metter">Get Pro (Lux Ligt Metter)</string>
    <string name="unit">Unit</string>
    <string name="lx">Lx</string>
    <string name="automatic_recording">Automatic Recording</string>
    <string name="maximum_value">Maximum Value</string>
    <string name="calibration">Calibration</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="give_us_a_point">Give Us A Point</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="null_">Null</string>
    <string name="light_normal">Your light level is normal.</string>
    <string name="light_good_now">Your light level is good now.</string>
    <string name="light_bad">You need to raise your light level.</string>
    <string name="lightmeter_pro">Lightmeter Pro</string>
    <string name="premium_theme">Premium Theme</string>
    <string name="enim_maecenas_in_cras_cursus_faucibus_urna_vitae_etiam_pellentesque_orci">See the light value in more detail from special themes.</string>
    <string name="no_ads">No-ads</string>
    <string name="detail">Detail</string>
    <string name="access_saved_light_meter_details">Access saved light meter details.</string>
    <string name="montly">Montly</string>
    <string name="per_month">Per Month</string>
    <string name="yearly">Yearly</string>
    <string name="per_yearly">Per yearly</string>
    <string name="join">Join</string>
    <string name="eula">EULA</string>
    <string name="subscription_details">*Subscription Details</string>
    <string name="subscriptions_will_automatically_renew_and_your_credit_card_will_be_charged_at_the_end_of_each_period_unless_you_unsubscribe_at_least_24_hours_before_to_manage_your_subscription_access_your_google_play_profile_in_your_phone">Subscriptions will automatically renew and your credit card will be charged at the end of each period, unless you unsubscribe at least 24 hours before. To manage your subscription, access your Google Play profile in your phone.</string>
    <string name="avg">Avg</string>
    <string name="date">Date</string>
    <string name="min">Min</string>
    <string name="go_premium">Go Premium</string>
    <string name="view_other_themes">View other themes.</string>
    <string name="save_your_light_meter_value_measurement_and_access_the_data_whenever_you_want">Save your light meter value measurement and access the data whenever you want.</string>
    <string name="review_your_records_and_history">Review Your Records and History!</string>
    <string name="skip">Skip</string>
    <string name="continue2">Continue</string>
    <string name="follow_light_meter_values_instantly">Follow Light Meter Values Instantly!</string>
    <string name="intervene_in_your_environment_and_create_a_more_comfortable_environment_with_instant_light_value_information">Intervene in your environment and create a more comfortable environment with instant light value information.</string>
    <string name="customizable_settings_are_under_your_control" tools:ignore="MissingTranslation">Customizable Settings Are Under Your Control!</string>
    <string name="continue_taking_your_measurements_without_watching_ads">Continue taking your measurements without watching ads.</string>
    <string name="weekly">Weekly</string>
    <string name="per_weekly">Per Weekly</string>
    <string name="try_or_Free">"Start your 3-day free trial"</string>
    <string name="control_the_light_measurement_values_as_you_wish_and_protect_your_eye_health">Control the light measurement values as you wish and protect your eye health.</string>
    <string name="enjoy_ad_free">Enjoy Ad-Free</string>
    <string name="experience" tools:ignore="MissingTranslation">Experience</string>
    <string name="experience_the_application_completely_free_for_3_days">Experience the application completely free for 3 days.</string>
    <string name="give_your_recording_a_name">Give your recording a name</string>
    <string name="cancel2">Cancel</string>
    <string name="save">Save</string>
    <string name="test_name">Test Name</string>
    <string name="this_feature_is_premium_you_can_watch_rewarded_ads_or_consider_upgrade_options">This feature is premium, you can watch rewarded ads or consider upgrade options.</string>
    <string name="upgrade">Upgrade</string>
    <string name="watch_ad">Watch Ad</string>
    <string name="the_Ad_failed">The ad failed to load, please try again.</string>
    <string name="your_record_will_be_deleted_are_you_sure">Your record will be deleted , are you sure ?</string>
    <string name="this_feature_is_premium_you_can_watch_ads_or_use_upgrade_options">This feature is premium. You can watch ads or use upgrade options.</string>
    <string name="you_are_using_premium">YOU ARE USING PREMIUM</string>
    <string name="data">Data</string>
    <string name="study_desk_2">Study Desk 2</string>
    <string name="library_2">Library 2</string>
</resources>